feat(OrderService): remove tokenA and tokenB from service
Since 0x has removed tokenA and tokenB from the list of parameters of order service, they must be removed from the api.
